--- a/kafka-2-integration/pom.xml
+++ b/kafka-2-integration/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.1.RELEASE</version>
+		<version>2.1.0.M2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -36,12 +36,12 @@
 		<dependency>
 			<groupId>org.springframework.integration</groupId>
 			<artifactId>spring-integration-kafka</artifactId>
-			<version>3.0.3.RELEASE</version>
+			<version>3.1.0.M1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.integration</groupId>
 			<artifactId>spring-integration-amqp</artifactId>
-			<version>5.0.4.RELEASE</version>
+			<version>5.1.0.M2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
